# polaris

./: .gitignore  pyproject.toml
src/polaris/: __init__.py  embeddings.py  main.py  settings.py  vectorstore.py
src/polaris/tools/: image_generator.py  indexer.py  retriever.py
